--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,9 +60,19 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/fonts/
   #   - images/a_dot_ham.jpeg
+
+  fonts:
+    - family: SF UI Display
+      fonts:
+        - asset: assets/fonts/sf-ui-display-bold-58646a511e3d9.otf
+          weight: 600
+        - asset: assets/fonts/sf-ui-display-medium-58646be638f96.otf
+          weight: 500
+        - asset: assets/fonts/sf-ui-display-medium-58646be638f96.otf
+          weight: 600
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
   # For details regarding adding assets from package dependencies, see
