--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   intl: ^0.17.0
   flutter_svg: ^1.1.6
+  auto_size_text: ^3.0.0
 
 dev_dependencies:
   flutter_test:
