--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   intl: ^0.17.0
   flutter_svg: ^1.1.6
   auto_size_text: ^3.0.0
+  syncfusion_flutter_datepicker: ^20.4.54
+  dio: ^5.1.2
 
 dev_dependencies:
   flutter_test:
