--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,20 +36,21 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.5
   json_annotation: ^4.8.1
   built_value: ^8.6.1
   intl: ^0.18.0
   flutter_svg: ^2.0.7
   auto_size_text: ^3.0.0
-  syncfusion_flutter_datepicker: ^22.1.37
-  dio: ^5.1.2
+  syncfusion_flutter_datepicker: ^22.1.39
+  dio: ^5.3.0
   pretty_dio_logger: ^1.3.1
   connectivity_plus: ^4.0.1
-  
+  flutter_bloc: ^8.1.3
+  equatable: ^2.0.5
 
 dev_dependencies:
-  flutter_lints: ^2.0.0
+  flutter_lints: ^2.0.2
   build_runner: ^2.4.6
   json_serializable: ^6.7.1
   flutter_test:
