--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.18.5 <=3.1.5'
+  sdk: '>=3.2.0-229.0.dev <=4.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -36,23 +36,26 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.5
+  cupertino_icons: ^1.0.6
   json_annotation: ^4.8.1
-  built_value: ^8.6.1
-  intl: ^0.18.0
-  flutter_svg: ^2.0.7
+  built_value: ^8.6.3
+  intl: ^0.18.1
+  flutter_svg: ^2.0.8
   auto_size_text: ^3.0.0
-  syncfusion_flutter_datepicker: ^22.1.39
-  dio: ^5.3.0
+  syncfusion_flutter_datepicker: ^23.1.42
+  dio: ^5.3.3
   pretty_dio_logger: ^1.3.1
-  connectivity_plus: ^4.0.1
+  connectivity_plus: ^5.0.1
   flutter_bloc: ^8.1.3
   equatable: ^2.0.5
+  get_it: ^7.6.4
+  auto_route: ^7.8.4
 
 dev_dependencies:
-  flutter_lints: ^2.0.2
+  flutter_lints: ^3.0.0
   build_runner: ^2.4.6
   json_serializable: ^6.7.1
+  auto_route_generator: ^7.3.2
   flutter_test:
     sdk: flutter
 
