--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,12 +50,16 @@ dependencies:
   equatable: ^2.0.5
   get_it: ^7.6.4
   auto_route: ^7.8.4
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  image_picker: ^1.0.4
 
 dev_dependencies:
   flutter_lints: ^3.0.1
   build_runner: ^2.4.6
   json_serializable: ^6.7.1
   auto_route_generator: ^7.3.2
+  hive_generator: ^2.0.1
   flutter_test:
     sdk: flutter
 
